# FinalExam-backend

./: .env.exsample  .gitignore  Makefile  main.py  pyproject.toml  routers.py  settings.py  sqlite.db
backend_fastapi/: __init__.py  models.py
backend_fastapi/archive/: views.py
backend_fastapi/auth/: models.py  schemas.py  views.py
backend_fastapi/bot/: models.py  schemas.py  views.py
backend_fastapi/channel/: models.py  schemas.py  views.py
backend_fastapi/chat/: models.py  schemas.py  views.py
backend_fastapi/database/: database.py  field_types.py  models.py  schemas.py
backend_fastapi/game/: views.py
backend_fastapi/group/: models.py  schemas.py  views.py
backend_fastapi/history/: views.py
backend_fastapi/home/: views.py
backend_fastapi/live/: models.py  schemas.py  views.py
backend_fastapi/market/: models.py  views.py
backend_fastapi/payment/: models.py  schemas.py  views.py
backend_fastapi/profile/: models.py  schemas.py  views.py
backend_fastapi/search/: models.py  schemas.py  views.py
backend_fastapi/stories/: views.py
backend_fastapi/wallet/: views.py
migrations/: env.py
migrations/versions/: 0bf9d50bd7be_fix_created_userpublish_for_idential_.py  0d34f35193f5_initial.py  1060c5f88c69_init_initial.py  2b339b9c108e_initiala.py  6c6fcfa30288_init_initial.py  7254511420c0_fix_initial.py  9d67912e586f_initial.py  ddda12a3fb47_initial.py
