[tool.poetry]
name = "backend-fastapi"
version = "0.1.0"
description = ""
authors = ["Asadbek <ahikmatullayev024@gmail.com>"]
readme = "README.md"
packages = [{include = "backend_fastapi"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.109.2"}
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.3"}

[tool.poetry.scripts]
project = "main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
